@@ -1,3 +1,10 @@
+2007-07-14  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: src/kahua-keyserv.scm, src/kahua/session.scm
+	  Now the connection between a worker process and kahua-keyserv
+	  is persistent one.  This implementation assume that kahua-server
+	  is a single thread program.
+
 2007-07-05  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: src/kahua/server.scm
